# backend/api-docs/swagger.json
@@ -4757,6 +4757,9 @@
         "models.CollectionItem": {
             "type": "object",
             "properties": {
+                "artwork_version": {
+                    "type": "integer"
+                },
                 "child_count": {
                     "type": "integer"
                 },
@@ -5081,6 +5084,10 @@
                     "description": "Added timestamp",
                     "type": "integer"
                 },
+                "artwork_version": {
+                    "description": "Opaque image cache version",
+                    "type": "integer"
+                },
                 "content_rating": {
                     "description": "Used in MediaItem Details Page - For more information about the item",
                     "type": "string"
@@ -5166,7 +5173,7 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "description": "Last updated timestamp",
+                    "description": "Last updated timestamp from the media server",
                     "type": "integer"
                 },
                 "year": {
@@ -5766,11 +5773,11 @@
         "routes_download.DownloadCollectionImage_Response": {
             "type": "object",
             "properties": {
+                "artwork_version": {
+                    "type": "integer"
+                },
                 "result": {
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "integer"
                 }
             }
         },
@@ -5788,11 +5795,11 @@
         "routes_download.DownloadImageFileForMediaItem_Response": {
             "type": "object",
             "properties": {
+                "artwork_version": {
+                    "type": "integer"
+                },
                 "result": {
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "integer"
                 }
             }
         },
